summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value Direction
    setDirection(Direction.WEST)
                 ^Moria:15: error: not found: value Direction
          case Direction.EAST => droite();avance()
               ^Moria:16: error: not found: value Direction
          case Direction.SOUTH => gauche();avance()
               ^